--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="carousel">
             <video class="carousel-item active" playsinline controls>
-                <source src="fish_by_fish.mov" type="video/quicktime">
+                <source src="fish_by_fish.mp4" type="video/mp4">
             </video>
             <video class="carousel-item" playsinline controls>
                 <source src="next_play.mp4" type="video/mp4">
