--- a/index.html
+++ b/index.html
@@ -19,23 +19,19 @@
         }
 
         .carousel {
-            position: relative;
-            padding-bottom: 56.25%;
-            margin: 20px 0;
-            height: 0;
+            margin: 20px auto;
+            max-width: 366px;
+        }
+
+        video {
+            width: 100%;
+            aspect-ratio: 9/16;
+            object-fit: cover;
+            display: none;
             background: #f5f5f5;
         }
 
-        .carousel-item {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: none;
-        }
-
-        .carousel-item.active {
+        video.active {
             display: block;
         }
 
@@ -64,13 +60,13 @@
         <p>Preset was an app that taught scientifically-validated mental techniques for high performance. Users applied these to advance at work, scale businesses, or achieve personal goals.</p>
 
         <div class="carousel">
-            <video class="carousel-item active" playsinline controls>
+            <video class="active" playsinline controls preload="auto">
                 <source src="fish_by_fish.mp4" type="video/mp4">
             </video>
-            <video class="carousel-item" playsinline controls>
+            <video playsinline controls preload="auto">
                 <source src="next_play.mp4" type="video/mp4">
             </video>
-            <video class="carousel-item" playsinline controls>
+            <video playsinline controls preload="auto">
                 <source src="bad_simpsons.mp4" type="video/mp4">
             </video>
         </div>
@@ -91,12 +87,14 @@
 
     <script>
         function showSlide(index) {
-            // Hide all slides
-            document.querySelectorAll('.carousel-item').forEach(item => {
-                item.classList.remove('active');
+            // Pause all videos
+            document.querySelectorAll('video').forEach(video => {
+                video.pause();
+                video.classList.remove('active');
             });
-            // Show selected slide
-            document.querySelectorAll('.carousel-item')[index].classList.add('active');
+            // Show and play selected video
+            const selectedVideo = document.querySelectorAll('video')[index];
+            selectedVideo.classList.add('active');
             
             // Update button states
             document.querySelectorAll('.carousel-nav button').forEach(button => {
