--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+ <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preset</title>
@@ -11,6 +11,8 @@
             padding: 0 10px;
             margin: 50px auto;
             max-width: 650px;
+            min-height: 100vh;
+            padding-bottom: 200px;
         }
 
         #maincontent {
@@ -20,7 +22,9 @@
 
         .carousel {
             margin: 20px auto;
-            max-width: 366px;
+            width: 100%;
+            max-width: 275px;  /* Reduced from 366px by ~25% */
+            min-width: 210px;  /* Also reduced proportionally */
         }
 
         video {
@@ -29,6 +33,40 @@
             object-fit: cover;
             display: none;
             background: #f5f5f5;
+            /* Add subtle border and shadow to make it more button-like */
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            cursor: pointer;
+        }
+
+        /* Add play button overlay */
+        .video-wrapper {
+            position: relative;
+            display: none;
+        }
+
+        .video-wrapper.active {
+            display: block;
+        }
+
+        .video-wrapper::before {
+            content: "▶";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 24px;
+            color: white;
+            background: rgba(0,0,0,0.5);
+            padding: 15px 20px;
+            border-radius: 50%;
+            z-index: 1;
+            pointer-events: none;
+            opacity: 0.9;
+        }
+
+        .video-wrapper.playing::before {
+            display: none;
         }
 
         video.active {
@@ -50,6 +88,12 @@
 
         .carousel-nav button.active {
             background: #eee;
+        }
+
+        @media (max-width: 480px) {
+            .carousel {
+                width: 65vw;  /* Reduced from 85vw */
+            }
         }
     </style>
 </head>
@@ -87,14 +131,17 @@
 
     <script>
         function showSlide(index) {
-            // Pause all videos
+            // Pause and hide all videos
             document.querySelectorAll('video').forEach(video => {
                 video.pause();
                 video.classList.remove('active');
             });
-            // Show and play selected video
+            
+            // Show, reset, and play selected video
             const selectedVideo = document.querySelectorAll('video')[index];
             selectedVideo.classList.add('active');
+            selectedVideo.currentTime = 0;  // Reset to start
+            selectedVideo.play().catch(e => console.log("Autoplay prevented"));
             
             // Update button states
             document.querySelectorAll('.carousel-nav button').forEach(button => {
