--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
         <p>Preset was an app that taught scientifically-validated mental techniques for high performance. Users applied these to advance at work, scale businesses, or achieve personal goals.</p>
 
         <div class="carousel">
-            <video class="active" playsinline controls preload="auto">
+            <video class="active" playsinline controls preload="auto" poster="poster.jpg">
                 <source src="fish_by_fish.mp4" type="video/mp4">
             </video>
-            <video playsinline controls preload="auto">
+            <video playsinline controls preload="auto" poster="poster.jpg">
                 <source src="next_play.mp4" type="video/mp4">
             </video>
-            <video playsinline controls preload="auto">
+            <video playsinline controls preload="auto" poster="poster.jpg">
                 <source src="bad_simpsons.mp4" type="video/mp4">
             </video>
         </div>
@@ -122,9 +122,9 @@
 
         <p>The motivation content industry is enormous, and shortly after the pandemic it seemed that the market was ready for a science-based, high-quality approach. We pulled together a group of <a href="https://www.hellonickgallo.com/">mobile video geniuses</a>, <a href="https://www.instagram.com/jtenthousand/">Emmy-award winning TV writers</a>, <a href="https://gregorywalton-stanford.weebly.com/">psychologists from Stanford</a>, top-notch designers and devs, and some of the <a href="https://www.instagram.com/erock_808/">best-regarded coaches</a> in the world. We came to work every day guided by the core belief that peak performance is learnable.</p>
 
-        <p>Along the way, we reviewed hundreds (or maybe even thousands) of academic papers, books, and videos on motivation. We iterated relentlessly on our content – running a casting call for hundreds of potential actors and filming hundreds of motivational videos. Later, we started using (what were at the time) very new commercial AI techniques, like RAG and voice cloning, to create fully personalized content. As a foil against typical motivational content, which overuses the same two or three techniques, everything we shipped was rooted in one of ~100 validated mindset technique from the literature.</p>
+        <p>Along the way we reviewed hundreds (or maybe even thousands) of academic papers, books, and videos on motivation. We iterated relentlessly on our content – running a casting call for hundreds of potential actors and filming hundreds of motivational videos. Later, we started using newly-available AI techniques, like RAG and voice cloning, to create fully personalized content. As a foil against typical motivational content, which overuses the same two or three techniques, everything we shipped was rooted in one of ~100 validated mindset technique from the literature.</p>
 
-        <p>We loved hearing stories from users around the world as they used Preset to help them get ahead at work, train for marathons and other races, battle addiction, get out of bad relationships and into good ones, and more. </p>
+        <p>We loved hearing stories from users around the world as they used Preset to help them get ahead at work, train for marathons and other races, battle addiction, get out of bad relationships, and more. </p>
 
         <p> Preset was shut down at the end of 2023. The research behind performance psychology is powerful and fascinating, and I encourage you to keep exploring it. Feel free to <a href="https://www.linkedin.com/in/michaelkuznetsov/">reach out</a> and share a bit about what you're working on. If time allows, I'll be happy to share any of the research we did that might be helpful.</p>
     </div>
